--- a/templates/ann/cat/cat.html
+++ b/templates/ann/cat/cat.html
@@ -77,7 +77,7 @@
         <div class="bg-secondary " style="min-height: 40px;">
     
             <marquee style="color:#fff; margin-top: 7px;">
-                <h9>Developed by Department of Computer Engineering, PIET</h9>
+                <h9>Developed by Department of Computer Engineering, PCEE</h9>
             </marquee>
         </div>
     </div>
